--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Slab:wght@100&family=Red+Hat+Display:wght@300;400&display=swap');
+
 .App {
   text-align: center;
 }
